[package]
name = "ssrfsup"
version = "0.1.0"
edition = "2021"
authors = ["Jeremi Gosney <jgosney@yahooinc.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.2", features = ["derive"] }
md5 = "0.7.0"
reqwest = { version = "0.11.26", features = ["serde_json", "async-compression", "deflate", "gzip", "trust-dns-resolver"] }
serde = { version = "1.0.197", features = ["derive", "serde_derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full", "mio"] }
url = "2.5.0"
once_cell = "1.19.0"
